--- a/src/content/index.css
+++ b/src/content/index.css
@@ -1,4 +1,4 @@
-#modal-button {
+#draggable-button {
   position: absolute;
   display: none;
   width: 50px;
@@ -17,4 +17,11 @@
   background-color: white;
   color: black;
   border: 1px solid black;
+}
+
+#modal-button {
+  width: 50px;
+  height: 50px;
+  background-color: purple;
+  border-radius: 5%;
 }
