--- a/src/popup/Popup.css
+++ b/src/popup/Popup.css
@@ -1,9 +1,13 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 :root {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-main {
+/* main {
   text-align: center;
   padding: 1em;
   margin: 0 auto;
@@ -35,4 +39,4 @@ a {
   h3 {
     max-width: none;
   }
-}
+} */
